fix the jumpy sub menu desktop

--- a/patterns/menu.scss
+++ b/patterns/menu.scss
@@ -339,7 +339,6 @@ ul[role='menu'] ul li a {
 
   ul[role='menubar'] > li:focus-within > ul[role='menu'] {
     width: 100%;
-    padding: 0;
   }
 }
 
